@@ -5,10 +5,10 @@
   <parent>
     <groupId>run.mone</groupId>
     <artifactId>jcommon</artifactId>
-    <version>1.4-jdk20-SNAPSHOT</version>
+    <version>1.6.0-jdk21-SNAPSHOT</version>
   </parent>
   <artifactId>docean</artifactId>
-  <version>1.4-jdk20-SNAPSHOT</version>
+  <version>${submodule-release.version}</version>
   <properties>
     <netty.version>4.1.97.Final</netty.version>
   </properties>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>run.mone</groupId>
       <artifactId>easy</artifactId>
-      <version>1.4-jdk20-SNAPSHOT</version>
+      <version>1.6.0-jdk21-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>cglib</groupId>
@@ -58,12 +58,19 @@
         <version>3.11.0</version>
         <configuration>
           <compilerArgs>
-            <arg>--add-modules=jdk.incubator.concurrent</arg>
             <arg>--enable-preview</arg>
           </compilerArgs>
-          <compilerVersion>20</compilerVersion>
-          <source>20</source>
-          <target>20</target>
+          <compilerVersion>21</compilerVersion>
+          <source>21</source>
+          <target>21</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
     </plugins>
